--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
