--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.3",
     "http-errors": "~1.6.3",
+    "luxon": "^3.2.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
