--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-password-protect": "^1.0.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
     "http-errors": "~1.6.3",
     "luxon": "^3.2.1",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.9.2",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
